[workspace]
resolver = "2"
members = ["game", "input", "camera", "graphics"]

[workspace.dependencies]
async-trait = "0.1.73"
bytemuck = { version = "1.14.0", features = ["derive"] }
crevice = "0.14.0"
crevice-derive = "0.10.0"
mint = "0.5.9"
thiserror = "1.0.48"
winit = { git = "https://github.com/iced-rs/winit.git", rev = "c52db2045d0a2f1b8d9923870de1d4ab1994146e", features = ["serde"] }
#winit = { version = "0.28.6", features = ["serde"] }
image = "0.24.7"
tokio = { version = "1.32.0", features = ["full"] }
guillotiere = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
camera = { path = "./camera", package = "ascending_camera"}
input = { path = "./input", package = "ascending_input" }
graphics = { path = "./graphics", package = "ascending_graphics" }
log = "0.4.20"
backtrace = "0.3.69"
futures = "0.3.28"
cosmic-text = { version = "0.10.0" } #git = "https://github.com/pop-os/cosmic-text" }
ordered-float = { version = "3.9.1", features = ["serde"] }
chrono = { version = "0.4.30", disable-defaults = true, features = ["clock", "serde", "std"] }
ubits = "0.3.1"
lru = "0.11.1"
generational_array = "0.1.1"
ritehash = "0.2.0"
hecs = "0.10.3"
glam = { version = "0.24.1", features = ["bytemuck", "mint"] }
lyon = "1.0.1"
#softbuffer = "0.3.0"
slab = "0.4.9"

[workspace.dependencies.naga]
#git = "https://github.com/gfx-rs/naga"
#rev = "76003dc0035d53a474d366dcdf49d2e4d12e921f"
version = "0.14.0"
features = ["span", "validate", "wgsl-in"]

[workspace.dependencies.wgpu]
#git = "https://github.com/gfx-rs/wgpu"
#rev = "061e04b"
#features = ["angle"]
version = "0.18.0"

#[patch."https://github.com/iced-rs/iced.git"]
#iced_renderer = { git = "https://github.com/genusistimelord/iced.git" }
#iced_widget = { git = "https://github.com/genusistimelord/iced.git"}
